# oai-responses-api-chat-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chatcli/: __init__.py  api_client.py  assets.py  cli.py  config.py  history.py
